--- a/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
@@ -150,6 +150,8 @@
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
+        <!-- loading modal -->
+        @Html.Raw(File.ReadAllText(Server.MapPath("~/Common/Modals/loading.html")))
     </div>
 
     @Scripts.Render("~/bundles/jquery")
