resumo da cotacao em andamento

--- a/Cap.Web/Views/Cotacao/Index.cshtml
+++ b/Cap.Web/Views/Cotacao/Index.cshtml
@@ -25,8 +25,8 @@
         <div class="alert alert-info">@ViewBag.Message</div>
     }
 
-    <div class="row top20">
-        @*Departamento: @Model.Requisicao.Departamento.Descricao<br />@Model.Requisicao.Departamento.Endereco, @Model.Requisicao.Departamento.Bairro, @Model.Requisicao.Departamento.Cidade, @Model.Requisicao.Departamento.Estado.UF, CEP @Model.Requisicao.Departamento.Cep*@
+    <div class="row top20 alert alert-info">
+        Departamento: @Model.Requisicao.Departamento.Descricao<br />@Model.Requisicao.Departamento.Endereco, @Model.Requisicao.Departamento.Bairro, @Model.Requisicao.Departamento.Cidade, @Model.Requisicao.Departamento.Estado.UF, CEP @Model.Requisicao.Departamento.Cep
     </div>
 
     <h3>Itens à cotar</h3>
