resumo da cotacao

--- a/Cap.Web/Areas/Erp/Views/CotacaoFornecedor/CotacaoItem.cshtml
+++ b/Cap.Web/Areas/Erp/Views/CotacaoFornecedor/CotacaoItem.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Cap.Domain.Models.Requisicao.CotacaoItem>
 
 <table class="borderless" style="border:none">
-    <tr>
+    <tr style="border:none">
         @foreach (var item in Model)
         {
             <td>
