--- a/Cap.Web/Areas/Erp/Views/CotacaoFornecedor/Indicacao.cshtml
+++ b/Cap.Web/Areas/Erp/Views/CotacaoFornecedor/Indicacao.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayFor(modelItem => item.ValorCotacao)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.DescontoANegociarPorcentagem) % = 
+            @Html.DisplayFor(modelItem => item.DescontoANegociarPorcentagem) = 
             @Html.DisplayFor(modelItem => item.DescontoANegociar)
         </td>
         <td>
