--- a/Cap.Web/Areas/Erp/Views/CotacaoFornecedor/Detalhamento.cshtml
+++ b/Cap.Web/Areas/Erp/Views/CotacaoFornecedor/Detalhamento.cshtml
@@ -14,7 +14,9 @@
             @Html.DisplayNameFor(model => model.Descricao)
         </th>
         <th>
-            
+            @{ 
+                Html.RenderPartial("~/Areas/Erp/Views/CotacaoFornecedor/CotacaoItemDados.cshtml", Model.First().Cotacao);
+            }            
         </th>
     </tr>
 
