--- a/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
@@ -171,6 +171,12 @@
                     orientation: 'bottom left'
                 });
             });
+
+            function ShowMessage(msg) {
+                $('#modal').load('/Erp/ModalInfo/Index/', { 'msg': msg }, function () {
+                    $('#modal').modal('show');
+                });
+            }
         });
     </script>
 </body>
