--- a/Cap.Web/Areas/Erp/Views/CotacaoFornecedor/Influencia.cshtml
+++ b/Cap.Web/Areas/Erp/Views/CotacaoFornecedor/Influencia.cshtml
@@ -1,69 +1,72 @@
 ﻿@model Cap.Domain.Models.Requisicao.Resumo
 
-<h3 class="top40">Influência dos Insumos na Cotação</h3>
+<div id="influencia">
+    <h3 class="top40">Influência dos Insumos na Cotação</h3>
 
-<table class="table">
-    <tr>
-        <th class="text-right">
-            @Html.DisplayNameFor(model => model.Influencia.First().Qtde)
-        </th>
-        <th class="text-center">
-            @Html.DisplayNameFor(model => model.Influencia.First().Unidade)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Influencia.First().Descricao)
-        </th>
-        <th class="text-right">
-            @Html.DisplayNameFor(model => model.Influencia.First().UnitarioComImpostos)
-        </th>
-        <th class="text-right">
-            @Html.DisplayNameFor(model => model.Influencia.First().TotalComImpostos)
-        </th>
-        <th class="text-center">
-            @Html.DisplayNameFor(model => model.Influencia.First().InfluenciaInsumo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Influencia.First().Fornecedor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Influencia.First().Observ)
-        </th>
-    </tr>
+    <table class="table">
+        <tr>
+            <th class="text-right">
+                @Html.DisplayNameFor(model => model.Influencia.First().Qtde)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Influencia.First().Unidade)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Influencia.First().Descricao)
+            </th>
+            <th class="text-right">
+                @Html.DisplayNameFor(model => model.Influencia.First().UnitarioComImpostos)
+            </th>
+            <th class="text-right">
+                @Html.DisplayNameFor(model => model.Influencia.First().TotalComImpostos)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Influencia.First().InfluenciaInsumo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Influencia.First().Fornecedor)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Influencia.First().Observ)
+            </th>
+        </tr>
 
-@foreach (var item in Model.Influencia) {
-    <tr>
-        <td class="text-right">
-            @Html.DisplayFor(modelItem => item.Qtde)
-        </td>
-        <td class="text-center">
-            @Html.DisplayFor(modelItem => item.Unidade)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Descricao)
-        </td>
-        <td class="text-right">
-            @Html.DisplayFor(modelItem => item.UnitarioComImpostos)
-        </td>
-        <td class="text-right">
-            @Html.DisplayFor(modelItem => item.TotalComImpostos)
-        </td>
-        <td class="text-center">
-            @Html.DisplayFor(modelItem => item.InfluenciaInsumo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Fornecedor.Fantasia)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Observ)
-        </td>
-    </tr>
-}
-    <tr>
-        @{ 
-            string precoMinimo = Model.PrecoMinimo.ToString("c2");
+        @foreach (var item in Model.Influencia)
+        {
+            <tr>
+                <td class="text-right">
+                    @Html.DisplayFor(modelItem => item.Qtde)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.Unidade)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Descricao)
+                </td>
+                <td class="text-right">
+                    @Html.DisplayFor(modelItem => item.UnitarioComImpostos)
+                </td>
+                <td class="text-right">
+                    @Html.DisplayFor(modelItem => item.TotalComImpostos)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.InfluenciaInsumo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Fornecedor.Fantasia)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Observ)
+                </td>
+            </tr>
         }
-        <td colspan="5" class="text-right"><strong>@precoMinimo</strong></td>
-        <td colspan="3">(composição do melhor preço)</td>
-    </tr>
+        <tr>
+            @{
+                string precoMinimo = Model.PrecoMinimo.ToString("c2");
+            }
+            <td colspan="5" class="text-right"><strong>@precoMinimo</strong></td>
+            <td colspan="3">(composição do melhor preço)</td>
+        </tr>
 
-</table>
+    </table>
+</div>
