--- a/Cap.Web/Areas/Erp/Views/CotacaoFornecedor/Resumo.cshtml
+++ b/Cap.Web/Areas/Erp/Views/CotacaoFornecedor/Resumo.cshtml
@@ -4,26 +4,40 @@
     ViewBag.Title = "Resumo da cotação";
 }
 
-<h2>Resumo da cotação</h2>
+<div id="resumo">
+    <h2>Resumo da cotação</h2>
 
-@if (ViewBag.Error != null)
-{
-    <div class="alert alert-danger">@ViewBag.Error</div>
-}
+    @if (ViewBag.Error != null)
+    {
+        <div class="alert alert-danger">@ViewBag.Error</div>
+    }
 
-@if (ViewBag.Message != null)
-{
-    <div class="alert alert-info">@ViewBag.Message</div>
-}
+    @if (ViewBag.Message != null)
+    {
+        <div class="alert alert-info">@ViewBag.Message</div>
+    }
 
-<div class="row top20 alert alert-info">
-    Departamento: @Model.Requisicao.Departamento.Descricao<br />@Model.Requisicao.Departamento.Endereco, @Model.Requisicao.Departamento.Bairro, @Model.Requisicao.Departamento.Cidade, @Model.Requisicao.Departamento.Estado.UF, CEP @Model.Requisicao.Departamento.Cep
+    <div class="row top20 alert alert-info">
+        Departamento: @Model.Requisicao.Departamento.Descricao<br />@Model.Requisicao.Departamento.Endereco, @Model.Requisicao.Departamento.Bairro, @Model.Requisicao.Departamento.Cidade, @Model.Requisicao.Departamento.Estado.UF, CEP @Model.Requisicao.Departamento.Cep
+    </div>
+
+    @{
+        Html.RenderPartial("~/Areas/Erp/Views/CotacaoFornecedor/Influencia.cshtml", Model);
+        Html.RenderPartial("~/Areas/Erp/Views/CotacaoFornecedor/Indicacao.cshtml", Model.Indicacao);
+        Html.RenderPartial("~/Areas/Erp/Views/CotacaoFornecedor/Detalhamento.cshtml", Model.ResumoDetalhado);
+    }
+
+    <div class="modal" id="modal"></div>
+
+    <input type="button" value="Recalcular" id="recalcular" data-id="@Model.Requisicao.Id" class="btn btn-primary" />
+
+    <script type="text/javascript">
+    $('#recalcular').click(function () {
+        $('#loading').modal('show');
+        var id = $(this).attr('data-id');
+        $('#resumo').load("/Erp/CotacaoFornecedor/Resumo/" + id);
+        $('#loading').modal('hide');
+    });
+    </script>
+
 </div>
-
-@{ 
-    Html.RenderPartial("~/Areas/Erp/Views/CotacaoFornecedor/Influencia.cshtml", Model);
-    Html.RenderPartial("~/Areas/Erp/Views/CotacaoFornecedor/Indicacao.cshtml", Model.Indicacao);
-    Html.RenderPartial("~/Areas/Erp/Views/CotacaoFornecedor/Detalhamento.cshtml", Model.ResumoDetalhado);
-}
-
-<div class="modal" id="modal"></div>
