--- a/Cap.Web/Areas/Erp/Views/Requisicao/Editar.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Requisicao/Editar.cshtml
@@ -27,6 +27,7 @@
         @Html.HiddenFor(model => model.IdLiberadoPor)
         @Html.HiddenFor(model => model.LiberadoObserv)
         @Html.HiddenFor(model => model.IdSolicitadoPor)
+        @Html.HiddenFor(model => model.LogisticaId)
 
         <div class="row">
             <div class="col-md-4">
