--- a/Cap.Web/Areas/Erp/Views/Requisicao/EmAndamento.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Requisicao/EmAndamento.cshtml
@@ -24,16 +24,17 @@
                     <td style="border:none" class="text-center active">@Html.DisplayFor(x => entregarDia)</td>
                     <td style="border:none" class="active">@Html.DisplayFor(modelItem => item.SolicitadoPor.Nome)</td>
                     <td style="border:none" class="active">
-                        <a href="/Erp/Requisicao/Editar/@item.Id">Editar</a> | 
+                        <a href="/Erp/Requisicao/Editar/@item.Id">Editar</a> |
                         <a href="/Erp/CotacaoFornecedor/Resumo/@item.Id" target="_blank">Mapa</a> |
-                        Comprar | Logística
+                        Comprar |
+                        <a href="/Erp/Requisicao/Logistica/@item.Id">Logística</a>
                     </td>
                 </tr>
                 <tr class="borderless">
                     <td style="border:none"></td>
                     <td style="border:none" colspan="5">@{ Html.RenderAction("MaterialRequisicao", "ReqMaterial", new { id = item.Id }); }</td>
                 </tr>
-                        }
+            }
             <tr>
                 <td colspan="6"><hr /></td>
             </tr>
