--- a/Cap.Web/Areas/Erp/Views/Requisicao/Logistica.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Requisicao/Logistica.cshtml
@@ -16,7 +16,7 @@
 
 <div class="alert alert-info">
     As vezes uma requisição é solicitada, no entanto não se faz necessária a compra, visto que há material disponível em estoque
-    que atenda as necessidades.<br /><br />
+    que atenda as necessidades.<br />
     É possível, portanto, enviar esta requisição para a logística da empresa para que providencie a entrega.
 </div>
 
@@ -37,15 +37,20 @@
             Situação:<br />@ViewBag.Situacao
         </div>
     </div>
-    <div class="row">
-        @{  Html.RenderAction("MaterialRequisicao", "ReqMaterial", new { id = ViewBag.Id }); }
+    <div class="row top20">
+        <div class="panel panel-info">
+            <div class="panel panel-heading">Insumos</div>
+            <div class="panel-body">
+                @{  Html.RenderAction("MaterialRequisicao", "ReqMaterial", new { id = ViewBag.Id }); }
+            </div>
+        </div>
     </div>
 </div>
 
 <div class="panel panel-info">
     <div class="panel panel-heading">Logística</div>
     <div class="panel-body">
-        @using (Html.BeginForm("EmAndamento", "Requisicao", FormMethod.Post))
+        @using (Html.BeginForm("Logistica", "Requisicao", FormMethod.Post))
         {
             @Html.AntiForgeryToken()
 
@@ -54,6 +59,8 @@
                 @Html.HiddenFor(model => model.AlteradoEm)
                 @Html.HiddenFor(model => model.EmpresaId)
                 @Html.HiddenFor(model => model.UsuarioId)
+                @Html.Hidden("IdRequisicao", ((int)ViewBag.Id).ToString())
+                @Html.HiddenFor(model => model.Id)
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.MotoristaId, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -91,7 +98,6 @@
                         <input type="submit" value="Gravar" class="btn btn-primary" />
                     </div>
                 </div>
-
             </div>
         }
     </div>
