--- a/Cap.Web/Areas/Erp/Views/Requisicao/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Requisicao/Index.cshtml
@@ -12,6 +12,13 @@
                 Html.RenderAction("EmAndamento");
             }
         </div>
+        <div class="col-md-12">
+            @{ 
+                Html.RenderAction("Compradas");
+            }
+        </div>
     </div>
 </div>
+
+<div id="modal" class="modal"></div>
 
