--- a/Cap.Web/Areas/Erp/Views/Requisicao/Editar.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Requisicao/Editar.cshtml
@@ -27,7 +27,9 @@
         @Html.HiddenFor(model => model.IdLiberadoPor)
         @Html.HiddenFor(model => model.LiberadoObserv)
         @Html.HiddenFor(model => model.IdSolicitadoPor)
+        @Html.HiddenFor(model => model.PedidoId)
         @Html.HiddenFor(model => model.LogisticaId)
+        @Html.HiddenFor(model => model.CompradoEm)
 
         <div class="row">
             <div class="col-md-4">
