--- a/Cap.Web/Areas/Erp/Views/Configuracoes/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Configuracoes/Index.cshtml
@@ -29,7 +29,7 @@
             </h4>
         </div>
         <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-            <div class="panel-body">
+            <div class="panel-body" id="sistemaconfig">
                 @{  Html.RenderAction("Index", "SistemaConfig"); }
             </div>
         </div>
