--- a/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
@@ -79,6 +79,8 @@
                                 <li role="separator" class="divider"></li>
                                 <li><a href="/Erp/GrupoCotacao">Grupos de cotações</a></li>
                                 <li><a href="/Erp/CotarCom">Cotar com fornecedores</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="/Erp/ReqAutorizante">Cadastro de autorizantes</a></li>
                             </ul>
                         </li>
 
