Confirmação da entrega da requisicao

--- a/Cap.Web/Areas/Erp/Views/Requisicao/Editar.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Requisicao/Editar.cshtml
@@ -30,6 +30,8 @@
         @Html.HiddenFor(model => model.PedidoId)
         @Html.HiddenFor(model => model.LogisticaId)
         @Html.HiddenFor(model => model.CompradoEm)
+        @Html.HiddenFor(model => model.EntregueEm)
+        @Html.HiddenFor(model => model.EntregaConfirmadaPor)
 
         <div class="row">
             <div class="col-md-4">
