--- a/Cap.Web/Areas/Erp/Views/Requisicao/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Requisicao/Index.cshtml
@@ -9,6 +9,7 @@
     Html.RenderAction("EmAndamento");
     Html.RenderAction("Aprovadas");
     Html.RenderAction("Compradas");
+    Html.RenderAction("EntregasPrevistas");
 }
 
 <div id="modal" class="modal"></div>
