--- a/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
                                 <li><a href="/Erp/GrupoCotacao">Grupos de cotações</a></li>
                                 <li><a href="/Erp/CotarCom">Cotar com fornecedores</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li><a href="/Erp/ReqAutorizante">Cadastro de autorizantes</a></li>
+                                <li><a href="/Erp/Requisicao-autorizante">Cadastro de autorizantes</a></li>
                             </ul>
                         </li>
 
@@ -132,7 +132,7 @@
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="/Erp/Usuario/TrocarSenha">Trocar senha</a></li>
+                                <li><a href="/Erp/Trocar-senha">Trocar senha</a></li>
                             </ul>
                         </li>
                         <li>
