--- a/Cap.Web/Areas/Erp/Views/Requisicao/EntregasPrevistas.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Requisicao/EntregasPrevistas.cshtml
@@ -3,7 +3,7 @@
 @if (Model.Count() > 0)
 {
     <div class="panel panel-info">
-        <div class="panel panel-heading">Entregas previstas/entregues hoje</div>
+        <div class="panel panel-heading">Requisições previstas para entregas (próximos @ViewBag.Dias dias)</div>
         <div class="panel-body">
             <table class="table borderless">
                 <tr>
