--- a/Cap.Web/Areas/Erp/Views/SistemaConfig/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/SistemaConfig/Index.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.IdEmpresa)
@@ -20,6 +20,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.RequisicaoExibirComprasUltimosDias, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RequisicaoExibirComprasUltimosDias, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.RequisicaoExibirEntregasPrevistasAteProximosDias, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.RequisicaoExibirEntregasPrevistasAteProximosDias, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.RequisicaoExibirEntregasPrevistasAteProximosDias, "", new { @class = "text-danger" })
             </div>
         </div>
 
